--- a/_data/coauthors.yml
+++ b/_data/coauthors.yml
@@ -1,6 +1,6 @@
-"Adams":
-  - firstname: ["Edwin", "E.", "E. P.", "Edwin Plimpton"]
-    url: https://en.wikipedia.org/wiki/Edwin_Plimpton_Adams
+"Marcondes":
+  - firstname: ["Renato", "R.", "R. L.", "Renato Leite"]
+    url: http://lattes.cnpq.br/0017510939441350
 
 "Podolsky":
   - firstname: ["Boris", "B.", "B. Y.", "Boris Yakovlevich"]
