--- a/_data/coauthors.yml
+++ b/_data/coauthors.yml
@@ -2,33 +2,10 @@
   - firstname: ["Renato", "R.", "R. L.", "Renato Leite"]
     url: http://lattes.cnpq.br/0017510939441350
 
-"Podolsky":
-  - firstname: ["Boris", "B.", "B. Y.", "Boris Yakovlevich"]
-    url: https://en.wikipedia.org/wiki/Boris_Podolsky
+"Garcia":
+  - firstname: ["Bruna", "B.", "B. C.", "Bruna Carolina"]
+    url: http://lattes.cnpq.br/3199562592594946
 
-"Rosen":
-  - firstname: ["Nathan", "N."]
-    url: https://en.wikipedia.org/wiki/Nathan_Rosen
-
-"Bach": 
-  - firstname: ["Johann Sebastian", "J. S."]
-    url: https://en.wikipedia.org/wiki/Johann_Sebastian_Bach
-
-  - firstname: ["Carl Philipp Emanuel", "C. P. E."]
-    url: https://en.wikipedia.org/wiki/Carl_Philipp_Emanuel_Bach
-
-"Przibram":
-  - firstname: ["Karl"]
-    url: https://link.springer.com/article/10.1007/s00016-019-00242-z
-
-"Schrödinger":
-  - firstname: ["Erwin"]
-    url: https://en.wikipedia.org/wiki/Erwin_Schr%C3%B6dinger
-
-"Lorentz":
-  - firstname: ["Hendrik Antoon"]
-    url: https://en.wikipedia.org/wiki/Hendrik_Lorentz
-
-"Planck":
-  - firstname: ["Max"]
-    url: https://en.wikipedia.org/wiki/Max_Planck
+"Marcondes":
+  - firstname: ["Glaucia", "G.", "G. S.", "Glaucia dos Santos"]
+    url: http://lattes.cnpq.br/5775340584012436
