--- a/_data/coauthors.yml
+++ b/_data/coauthors.yml
@@ -6,6 +6,6 @@
   - firstname: ["Bruna", "B.", "B. C.", "Bruna Carolina"]
     url: http://lattes.cnpq.br/3199562592594946
 
-"Marcondes":
-  - firstname: ["Glaucia", "G.", "G. S.", "Glaucia dos Santos"]
+"Santos Marcondes":
+  - firstname: ["Glaucia", "G.", "G. S.", "Glaucia dos"]
     url: http://lattes.cnpq.br/5775340584012436
