--- a/_data/cv.yml
+++ b/_data/cv.yml
@@ -1,32 +1,21 @@
-- title: General Information
+- title: Informações Gerais
   type: map
   contents:
-    - name: Full Name
-      value: Albert Einstein
-    - name: Date of Birth
-      value: 14th March 1879
-    - name: Languages
-      value: English, German
+    - name: Nome
+      value: Matheus Alves Albino
 
-- title: Education
+- title: Formação
   type: time_table
   contents:
-    - title: PhD
-      institution: University of Zurich, Zurich, Switzerland
+    - title: Doutorado em Demografia (em andamento)
+      institution: Universidade Estadual de Campinas -- UNICAMP
       year: 1905
       description:
-        - Description 1.
-        - Description 2.
-        - title: Description 3.
-          contents:
-            - Sub-description 1.
-            - Sub-description 2.
-    - title: Federal teaching diploma
-      institution: Eidgenössische Technische Hochschule, Zurich, Switzerland
-      year: 1900
-      description:
-        - Description 1.
-        - Description 2.
+        - Dinâmica da mortalidade e saúde no Estado de São Paulo, 1900‐1969. Agência financiadora -- CNPq.
+        - Orientadora Dra. Ana Silvia Volpi Scott. Coorientadora Dra. Maisa Faleiros Cunha.
+    - title: Graduação em Ciências Contábeis (em andamento)
+      institution: Universidade Pitágoras Unopar
+      year: 2021
 
 - title: Experience
   type: time_table
